--- a/css/about.css
+++ b/css/about.css
@@ -112,6 +112,56 @@ section {
     }
 }
 
+/*eu mudei aqui 
+.profile-card {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+    z-index: 1000;
+}
+
+.profile-card img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin: 10px 0;
+}
+
+.profile-card h2 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #333;
+}
+
+.profile-card h4 {
+    margin: 5px 0;
+    font-size: 1.2em;
+    color: #666;
+}
+
+.profile-card .close-btn {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+.profile-card .close-btn:hover {
+    background-color: #d32f2f;
+}
+
+
+*/
+
 @media (max-width: 768px) {
     #fim-about {
         font-size: 2.5em;
